Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 1.2.1.1 =
* Various database improvements. 
* Added course progress display to student workbook.  
* Added unit progress to CoursePress theme on student workbook.  

= 1.2.1 =
* Fixed issue with incorrectly displayed footer on student login page
* Fixed issue with BuddyPress autocomplete on Compose Message page
* Added a number of hooks in the main CoursePress class

= 1.2 =
* Added Duplicate Course feature
* Fixed issue with "units" slugs
* Fixed jQuery conflicts with theme options in WPMU Dev themes  
* Added Unit restriction options to avoid confusion between 'completed answers' and 'successfull/passed answers'.  
* Fixed unit restriction checking on front end 'Units' page. Will now show restrictions required from previous unit.

= 1.1.1 = 
* Fixed issue with protection of the next unit when previous unit has set "User needs to complete current unit in order to access the next one"
* Fixed bug with removing a Single Choice element from a Unit

= 1.1.0 =
* Fixed issue with course limits in PRO version

= 1.0.9 =
* Resolved issue with details button on courses archive and inconsistent shortcode used

= 1.0.8 = 
-------------------------------------------------
* Upgraded MarketPress Bundle to 2.9.5.3
* Added warning message (for admins) to the course overview page if "anyone can register" is not selected
* Fixed issue with instructor capabilities settings and saving
* Fixes possible issues with rewrite rules formating and avoid 404s
* Fixed issue with non-protected discussions for students who didn't enroll to the course
* Fixed issue with visibility of the draft units for admins and instructors* Fixed up issues with course completion checking  
* Added file size indicator next to downloadable files  

= 1.0.7 = 
-------------------------------------------------